--- a/index.html
+++ b/index.html
@@ -79,6 +79,7 @@
             };
             
             questionDiv.appendChild(img);
+            questionDiv.appendChild(document.createElement("br"));
             questionDiv.appendChild(revealBtn);
             questionDiv.appendChild(answerDiv);
             container.appendChild(questionDiv);
