--- a/index.html
+++ b/index.html
@@ -28,7 +28,8 @@
             "Mechanics": {"q1": "A", "q2": "B", "q3": "C", "q4": "D", "q5": "A", "q6": "C", "q7": "B", "q8": "D", "q9": "A", "q10": "B"},
             "Thermodynamics": {"q1": "D", "q2": "C", "q3": "B", "q4": "A", "q5": "D", "q6": "B", "q7": "C", "q8": "A", "q9": "D", "q10": "C"},
             "Electromagnetism": {"q1": "C", "q2": "A", "q3": "D", "q4": "B", "q5": "C", "q6": "A", "q7": "B", "q8": "D", "q9": "C", "q10": "A"},
-            "Optics": {"q1": "B", "q2": "D", "q3": "A", "q4": "C", "q5": "B", "q6": "D", "q7": "A", "q8": "C", "q9": "B", "q10": "D"}
+            "Optics": {"q1": "B", "q2": "D", "q3": "A", "q4": "C", "q5": "B", "q6": "D", "q7": "A", "q8": "C", "q9": "B", "q10": "D"},
+            "Measurements": {"q1": "B", "q2": "D", "q3": "A", "q4": "C", "q5": "B", "q6": "D", "q7": "A", "q8": "C", "q9": "B", "q10": "D"}
         };
         let questionOrder = [];
         let currentQuestionIndex = 0;
