--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <button class="next-btn" onclick="nextQuestion()">Next</button>
 
     <script>
-        const topics = ["Mechanics", "Thermodynamics", "Electromagnetism", "Optics"];
+        const topics = ["Mechanics", "Thermodynamics", "Electromagnetism", "Optics","Measurements"];
         const basePath = "mcq_images/";
         const correctAnswers = {
             "Mechanics": {"q1": "A", "q2": "B", "q3": "C", "q4": "D", "q5": "A", "q6": "C", "q7": "B", "q8": "D", "q9": "A", "q10": "B"},
