--- a/index.html
+++ b/index.html
@@ -22,10 +22,13 @@
     <button class="next-btn" onclick="nextQuestion()">Next</button>
 
     <script>
-        const topics = ["Measurements"];
+        const topics = ["Measurements","Circular Motion","WEP","G-field"];
         const basePath = "mcq_images/";
         const correctAnswers = {
-            "Measurements": {"q1": "B", "q2": "D", "q3": "A", "q4": "C", "q5": "B", "q6": "D", "q7": "A", "q8": "C", "q9": "B", "q10": "D"}
+            "Measurements": {"q1": "B", "q2": "D", "q3": "A", "q4": "C", "q5": "B", "q6": "D", "q7": "A", "q8": "C", "q9": "B", "q10": "D"},
+            "Circular Motion": {"q1": "B", "q2": "D", "q3": "A", "q4": "C", "q5": "B", "q6": "D", "q7": "A", "q8": "C", "q9": "B", "q10": "D"},
+            "WEP": {"q1": "B", "q2": "D", "q3": "A", "q4": "C", "q5": "B", "q6": "D", "q7": "A", "q8": "C", "q9": "B", "q10": "D"},
+            "G-field": {"q1": "B", "q2": "D", "q3": "A", "q4": "C", "q5": "B", "q6": "D", "q7": "A", "q8": "C", "q9": "B", "q10": "D"}
         };
         let questionOrder = [];
         let currentQuestionIndex = 0;
