--- a/index.html
+++ b/index.html
@@ -14,6 +14,10 @@
         }
         h1 {
             color: #007bff;
+            white-space: nowrap;
+            overflow: hidden;
+            text-overflow: ellipsis;
+        }
         }
         select {
             padding: 10px;
