--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
             text-overflow: ellipsis;
             max-width: 100%;
             display: block;
+            font-size: min(6vw, 32px);
         }
         }
         select {
