--- a/index.html
+++ b/index.html
@@ -21,6 +21,10 @@
             display: block;
             font-size: min(6vw, 32px);
         }
+        @media screen and (max-width: 600px) {
+            h1 {
+                font-size: 5vw;
+            }
         }
         select {
             padding: 10px;
