--- a/index.html
+++ b/index.html
@@ -5,12 +5,77 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Physics MCQ by Dr. Han Wei</title>
     <style>
-        body { font-family: Arial, sans-serif; text-align: center; }
-        #topics { margin: 20px; }
-        img { max-width: 100%; height: auto; margin-top: 20px; }
-        .question-container { margin-bottom: 20px; }
-        .reveal-btn, .next-btn { margin-top: 10px; padding: 5px 10px; cursor: pointer; }
-        .correct-option { display: none; font-weight: bold; color: green; }
+        body {
+            font-family: Arial, sans-serif;
+            text-align: center;
+            background-color: #f4f4f4;
+            color: #333;
+            padding: 20px;
+        }
+        h1 {
+            color: #007bff;
+            white-space: nowrap;
+            overflow: hidden;
+            text-overflow: ellipsis;
+            max-width: 100%;
+            display: block;
+            font-size: min(6vw, 32px);
+        }
+        @media screen and (max-width: 600px) {
+            h1 {
+                font-size: 5vw;
+            }
+        }
+        select {
+            padding: 10px;
+            font-size: 16px;
+            border-radius: 5px;
+            border: 1px solid #ccc;
+            margin-bottom: 20px;
+            cursor: pointer;
+        }
+        .question-container {
+            background: white;
+            padding: 20px;
+            border-radius: 10px;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+            margin-bottom: 20px;
+            display: inline-block;
+            animation: fadeIn 0.5s ease-in-out;
+        }
+        @keyframes fadeIn {
+            from { opacity: 0; transform: translateY(-10px); }
+            to { opacity: 1; transform: translateY(0); }
+        }
+        img {
+            max-width: 100%;
+            height: auto;
+            margin-top: 10px;
+            border-radius: 8px;
+            border: 2px solid #ddd;
+            padding: 5px;
+            background: white;
+        }
+        .reveal-btn, .next-btn {
+            background: #007bff;
+            color: white;
+            border: none;
+            padding: 10px 15px;
+            font-size: 16px;
+            cursor: pointer;
+            border-radius: 5px;
+            transition: 0.3s;
+            margin-top: 10px;
+        }
+        .reveal-btn:hover, .next-btn:hover {
+            background: #0056b3;
+        }
+        .correct-option {
+            display: none;
+            font-weight: bold;
+            color: green;
+            margin-top: 10px;
+        }
     </style>
 </head>
 <body>
