--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             max-width: 100%;
             display: block;
             font-size: min(4vw, 20px); /* Smaller size */
-            position: fixed;
+            position: absolute;
             bottom: 10px;
             left: 50%;
             transform: translateX(-50%);
