--- a/index.html
+++ b/index.html
@@ -19,16 +19,7 @@
             text-overflow: ellipsis;
             max-width: 100%;
             display: block;
-            font-size: min(4vw, 20px); /* Smaller size */
-            position: absolute;
-            bottom: 10px;
-            left: 50%;
-            transform: translateX(-50%);
-            text-align: center;
-            background: rgba(255, 255, 255, 0.8);
-            padding: 5px 10px;
-            border-radius: 5px;
-            box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
+            font-size: min(3vw, 16px);
         }
         @media screen and (max-width: 600px) {
             h1 {
