--- a/index.html
+++ b/index.html
@@ -76,6 +76,22 @@
             color: green;
             margin-top: 10px;
         }
+
+        #drive-link {
+            position: fixed;
+            bottom: 20px;
+            left: 50%;
+            transform: translateX(-50%);
+            background-color: #007bff;
+            color: white;
+            padding: 10px 20px;
+            border-radius: 5px;
+            font-size: 16px;
+            text-decoration: none;
+        }
+        #drive-link:hover {
+            background-color: #0056b3;
+        }
     </style>
 </head>
 <body>
@@ -85,6 +101,9 @@
     </select>
     <div id="image-container"></div>
     <button class="next-btn" onclick="nextQuestion()">Next</button>
+
+    <a id="drive-link" href="https://drive.google.com/drive/u/1/folders/1TBGhOQCKfu7bw47hb1PQdADX7ZAtGW1p" target="_blank">Open Google Drive Folder</a>
+    
     <script>
         const topics = ["Measurements","Circular Motion","WEP","G-Field","Superposition","E-Field"];
         const basePath = "mcq_images/";
