--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
         #drive-link {
             position: fixed;
             bottom: 20px;
-            left: 50%;
+            left: 10%;
             transform: translateX(-50%);
             background-color: #007bff;
             color: white;
@@ -102,7 +102,7 @@
     <div id="image-container"></div>
     <button class="next-btn" onclick="nextQuestion()">Next</button>
 
-    <a id="drive-link" href="https://drive.google.com/drive/u/1/folders/1TBGhOQCKfu7bw47hb1PQdADX7ZAtGW1p" target="_blank">Open Google Drive Folder</a>
+    <a id="drive-link" href="https://drive.google.com/drive/u/1/folders/1TBGhOQCKfu7bw47hb1PQdADX7ZAtGW1p" target="_blank">Explanations & More Qns</a>
     
     <script>
         const topics = ["Measurements","Circular Motion","WEP","G-Field","Superposition","E-Field"];
