--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
     <a id="drive-link" href="https://drive.google.com/drive/u/1/folders/1TBGhOQCKfu7bw47hb1PQdADX7ZAtGW1p" target="_blank">Explanations & More Qns</a>
 
     <script>
-        const topics = ["Measurements","Circular Motion","WEP","G-Field","Superposition","E-Field"];
+        const topics = ["Measurements","Circular Motion","WEP","G-Field","Superposition","E-Field","EMI"];
         const basePath = "mcq_images/";
         const correctAnswers = {
             "Measurements": {"q1": "D", "q2": "B", "q3": "B", "q4": "D", "q5": "B", "q6": "C", "q7": "D", "q8": "A", "q9": "C", "q10": "D"},
