--- a/index.html
+++ b/index.html
@@ -145,7 +145,9 @@
             
             let questionDiv = document.createElement("div");
             let questionKey = questionOrder[currentQuestionIndex];
-            questionDiv.innerHTML = `<img src="${basePath}${selectedTopic}/${questionKey}.jpg" onerror="this.style.display='none'">`;
+            questionDiv.innerHTML = `<img src="${basePath}${selectedTopic}/${questionKey}.jpg" 
+                         onerror="this.style.display='none'" 
+                         style="max-width: 100%; height: auto;">`;
             
             let revealBtn = document.createElement("button");
             revealBtn.className = "reveal-btn";
