--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
         #drive-link {
             position: fixed;
             bottom: 20px;
-            left: 10%;
+            left: 20%;
             transform: translateX(-50%);
             background-color: #007bff;
             color: white;
@@ -60,6 +60,7 @@
             border-radius: 5px;
             font-size: 16px;
             text-decoration: none;
+            width: fit-content;
         }
         #drive-link:hover {
             background-color: #0056b3;
