--- a/index.html
+++ b/index.html
@@ -101,7 +101,8 @@
             "E-Field": {"q1": "D", "q2": "B", "q3": "A", "q4": "A", "q5": "B", "q6": "A", "q7": "C", "q8": "A", "q9": "C", "q10": "D", "q11": "A", "q12": "D",  
   "q13": "A", "q14": "B", "q15": "A", "q16": "D", "q17": "A", "q18": "C", "q19": "B", "q20": "B", "q21": "A", "q22": "A", "q23": "A", "q24": "B",  
   "q25": "A", "q26": "D", "q27": "B", "q28": "D", "q29": "C", "q30": "A"},
-            "EMI": {"q1": "B", "q2": "D", "q3": "C", "q4": "D", "q5": "C", "q6": "C", "q7": "B", "q8": "A", "q9": "D", "q10": "D"}
+            "EMI": {"q1": "B", "q2": "D", "q3": "C", "q4": "D", "q5": "C", "q6": "C", "q7": "B", "q8": "A", "q9": "D", "q10": "D", "q11": "A", "q12": "B",  
+  "q13": "C", "q14": "A", "q15": "D"}
         };
         
         window.onload = function() {
