--- a/index.html
+++ b/index.html
@@ -90,10 +90,11 @@
     <a id="drive-link" href="https://drive.google.com/drive/u/1/folders/1TBGhOQCKfu7bw47hb1PQdADX7ZAtGW1p" target="_blank">Explanations & More Qns</a>
 
     <script>
-        const topics = ["Measurements","Circular Motion","WEP","G-Field","Superposition","E-Field","EMI"];
+        const topics = ["Measurements","Forces & Moments","Circular Motion","WEP","G-Field","Superposition","E-Field","EMI"];
         const basePath = "mcq_images/";
         const correctAnswers = {
             "Measurements": {"q1": "D", "q2": "B", "q3": "B", "q4": "D", "q5": "B", "q6": "C", "q7": "D", "q8": "A", "q9": "C", "q10": "D"},
+            "Forces & Moments": {"q1": "B", "q2": "C", "q3": "C", "q4": "A", "q5": "C", "q6": "A", "q7": "D", "q8": "A", "q9": "D", "q10": "C"},
             "Circular Motion": {"q1": "B", "q2": "D", "q3": "A", "q4": "C", "q5": "B", "q6": "D", "q7": "A", "q8": "C", "q9": "B", "q10": "D"},
             "WEP": {"q1": "B", "q2": "D", "q3": "A", "q4": "C", "q5": "B", "q6": "D", "q7": "A", "q8": "C", "q9": "B", "q10": "D"},
             "Superposition": {"q1": "C", "q2": "C", "q3": "C", "q4": "B", "q5": "D", "q6": "B", "q7": "A", "q8": "C", "q9": "D", "q10": "C"},
