--- a/quiz.html
+++ b/quiz.html
@@ -65,6 +65,7 @@
         const basePath = "mcq_images/";
         const correctAnswers = {
             "Measurements": {"q1": "D", "q2": "B", "q3": "B", "q4": "D", "q5": "B", "q6": "C", "q7": "D", "q8": "A", "q9": "C", "q10": "D"},
+            "Forces & Moments": {"q1": "B", "q2": "C", "q3": "C", "q4": "A", "q5": "C", "q6": "A", "q7": "D", "q8": "A", "q9": "D", "q10": "C"},
             "Circular Motion": {"q1": "B", "q2": "D", "q3": "A", "q4": "C", "q5": "B", "q6": "D", "q7": "A", "q8": "C", "q9": "B", "q10": "D"},
             "WEP": {"q1": "B", "q2": "D", "q3": "A", "q4": "C", "q5": "B", "q6": "D", "q7": "A", "q8": "C", "q9": "B", "q10": "D"},
             "Superposition": {"q1": "C", "q2": "C", "q3": "C", "q4": "B", "q5": "D", "q6": "B", "q7": "A", "q8": "C", "q9": "D", "q10": "C"},
@@ -72,7 +73,8 @@
             "E-Field": {"q1": "D", "q2": "B", "q3": "A", "q4": "A", "q5": "B", "q6": "A", "q7": "C", "q8": "A", "q9": "C", "q10": "D", "q11": "A", "q12": "D",  
   "q13": "A", "q14": "B", "q15": "A", "q16": "D", "q17": "A", "q18": "C", "q19": "B", "q20": "B", "q21": "A", "q22": "A", "q23": "A", "q24": "B",  
   "q25": "A", "q26": "D", "q27": "B", "q28": "D", "q29": "C", "q30": "A"},
-            "EMI": {"q1": "B", "q2": "D", "q3": "C", "q4": "D", "q5": "C", "q6": "C", "q7": "B", "q8": "A", "q9": "D", "q10": "D"}
+            "EMI": {"q1": "B", "q2": "D", "q3": "C", "q4": "D", "q5": "C", "q6": "C", "q7": "B", "q8": "A", "q9": "D", "q10": "D", "q11": "A", "q12": "B",  
+  "q13": "C", "q14": "A", "q15": "D"}
         };
         
         function loadQuestions() {
