--- a/index.html
+++ b/index.html
@@ -96,7 +96,8 @@
             "Measurements": {"q1": "D", "q2": "B", "q3": "B", "q4": "D", "q5": "B", "q6": "C", "q7": "D", "q8": "A", "q9": "C", "q10": "D"},
             "Forces & Moments": {"q1": "B", "q2": "C", "q3": "C", "q4": "A", "q5": "C", "q6": "A", "q7": "D", "q8": "A", "q9": "D", "q10": "C"},
             "Circular Motion": {"q1": "B", "q2": "D", "q3": "A", "q4": "C", "q5": "B", "q6": "D", "q7": "A", "q8": "C", "q9": "B", "q10": "D"},
-            "WEP": {"q1": "B", "q2": "D", "q3": "A", "q4": "C", "q5": "B", "q6": "D", "q7": "A", "q8": "C", "q9": "B", "q10": "D"},
+            "WEP": {"q1": "C", "q2": "B", "q3": "B", "q4": "B", "q5": "C", "q6": "A", "q7": "C", "q8": "B", "q9": "B", "q10": "A", "q11": "C", "q12": "D",  
+  "q13": "B", "q14": "D", "q15": "D"},
             "Superposition": {"q1": "C", "q2": "C", "q3": "C", "q4": "B", "q5": "D", "q6": "B", "q7": "A", "q8": "C", "q9": "D", "q10": "C"},
             "G-Field": {"q1": "B", "q2": "D", "q3": "C", "q4": "A", "q5": "A", "q6": "A", "q7": "B", "q8": "B", "q9": "A", "q10": "D"},
             "E-Field": {"q1": "D", "q2": "B", "q3": "A", "q4": "A", "q5": "B", "q6": "A", "q7": "C", "q8": "A", "q9": "C", "q10": "D", "q11": "A", "q12": "D",  
