--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
     <a id="drive-link" href="https://drive.google.com/drive/u/1/folders/1TBGhOQCKfu7bw47hb1PQdADX7ZAtGW1p" target="_blank">Explanations & More Qns</a>
 
     <script>
-        const topics = ["Measurements","Forces & Moments","Circular Motion","WEP","G-Field","Superposition","E-Field","EMI"];
+        const topics = ["Measurements","Forces & Moments","Circular Motion","WEP","G-Field","Superposition","E-Field","EMI","AC"];
         const basePath = "mcq_images/";
         const correctAnswers = {
             "Measurements": {"q1": "D", "q2": "B", "q3": "B", "q4": "D", "q5": "B", "q6": "C", "q7": "D", "q8": "A", "q9": "C", "q10": "D"},
@@ -104,7 +104,9 @@
   "q13": "A", "q14": "B", "q15": "A", "q16": "D", "q17": "A", "q18": "C", "q19": "B", "q20": "B", "q21": "A", "q22": "A", "q23": "A", "q24": "B",  
   "q25": "A", "q26": "D", "q27": "B", "q28": "D", "q29": "C", "q30": "A"},
             "EMI": {"q1": "B", "q2": "D", "q3": "C", "q4": "D", "q5": "C", "q6": "C", "q7": "B", "q8": "A", "q9": "D", "q10": "D", "q11": "A", "q12": "B",  
-  "q13": "C", "q14": "A", "q15": "D"}
+  "q13": "C", "q14": "A", "q15": "D"},
+            "AC": {"q1": "C", "q2": "A", "q3": "C", "q4": "B", "q5": "C", "q6": "A", "q7": "B", "q8": "D", "q9": "C", "q10": "A", "q11": "C", "q12": "C",  
+  "q13": "A", "q14": "B", "q15": "D"}
         };
         
         window.onload = function() {
